fix: padding issues on several pages on small screen devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,9 @@
+.page-body .flex-col,
+.page-body .max-w-prose {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .page-footer {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
